--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" type="text/javascript" charset="utf-8"></script>
     <!-- <script src="indexController.js" type="text/javascript" charset="utf-8"></script> -->
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rancho" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Kreon" rel="stylesheet">
     <link rel="stylesheet" href="vendors/font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
   <body ng-app="myApp" ng-controller="IndexController as i">
@@ -20,14 +20,15 @@
       <a class="icon" href="http://github.com/neotamoe"><i class="fa fa-github fa-3x"></i></a>
     </header>
     <div class="work">
+      <h2 id="sample">Sample Work</h2>
       <div class="projects">
         <img class="screenshot" src="images/solo.png" alt="screenshot">
         <h3 class="description">Sci123 Quiz App - <span class="link"><a href="http://sci123.herokuapp.com">http://sci123.herokuapp.com</a></span></h3>
         <p class="description">Solo project created during a two week period during my time at Prime Digital Academy.  The quiz app is designed to complement a general education science course
           at Augsburg College (Sci123: Science of Food and Cooking).  This full stack web application includes a mongoDB with over 1000 quiz questions.  Questions are sorted by chapter
-          as well as assigned up to 5 tags.  Students sign in to quiz themself on course content or submit a new question for inclusion in the database (verification done using Passport).  Questions can be
+          as well as assigned up to 5 tags.  Students sign in to quiz themself on course content or submit a new question for inclusion in the quiz (verification done using Passport).  Questions can be
           selected by chapter or by tag/keyword.  Application administrator is notified by email when a student flags a question for review or submits a
-          question for inclusion in the databse.  The administrator can edit, save or delete flagged or newly-submitted questions from the database.</p>
+          question for inclusion in the database.  The administrator can edit, save or delete flagged or newly-submitted questions from the database.</p>
       </div>
       <div class="projects">
         <img class="screenshot" src="images/group.png" alt="screenshot">
@@ -47,7 +48,7 @@
         <img class="screenshot" src="images/highfives.png" alt="screenshot">
         <h3>Angular High Fives - <span class="link"><a href="http://shield-high-fives.herokuapp.com">http://shield-high-fives.herokuapp.com</a></span></h3>
         <p>Web application made during in class time while learning and developing comfort with ng-view, services, controllers.  Users "high-five" a character and are randomly generated their "skill" and it is
-          compared to the character's randomly generated "skill" level.  Each character has a different skill range.  Client-side logic compares the skill levels and caclulates and displays points.</p>
+          compared to the character's randomly generated "skill" level.  Each character has a different skill range.  Client-side logic compares the skill levels and calculates and displays points.</p>
       </div>
       <div class="projects">
         <img class="screenshot" src="images/serversidecalc.png" alt="screenshot">
