--- a/public/index.html
+++ b/public/index.html
@@ -13,50 +13,18 @@
   <body ng-app="myApp" ng-controller="IndexController as i">
     <header>
       <img id="headshot" src="images/headshot.jpg" alt="headshot">
-      <h1>Neota Moe, MSW, LICSW</h1>
+      <h1>Neota Moe, MSW</h1>
       <h2>Software Developer formerly disguised as a Clinical Social Worker</h2>
       <a class="icon" href="http://linkedin.com/in/neotamoe"><i class="fa fa-linkedin-square fa-3x"></i></a>
       <a class="icon" href="http://github.com/neotamoe"><i class="fa fa-github fa-3x"></i></a>
     </header>
+
     <div class="work">
-      <h2 id="sample">Sample Work</h2>
-      <div class="projects">
-        <img class="screenshot" src="images/solo.png" alt="screenshot">
-        <h3 class="description">Sci123 Quiz App - <span class="link"><a href="http://sci123.herokuapp.com">http://sci123.herokuapp.com</a></span></h3>
-        <p class="description">Solo project created during a two week period during my time at Prime Digital Academy.  The quiz app is designed to complement a general education science course
-          at Augsburg College (Sci123: Science of Food and Cooking).  This full stack web application includes a mongoDB with over 1000 quiz questions.  Questions are sorted by chapter
-          as well as assigned up to 5 tags.  Students sign in to quiz themself on course content or submit a new question for inclusion in the quiz (verification done using Passport).  Questions can be
-          selected by chapter or by tag/keyword.  Application administrator is notified by email when a student flags a question for review or submits a
-          question for inclusion in the database.  The administrator can edit, save or delete flagged or newly-submitted questions from the database.</p>
-      </div>
-      <div class="projects">
-        <img class="screenshot" src="images/group.png" alt="screenshot">
-        <h3>St Croix Valley Interactive Map - <span class="link"><a href="http://stcroixmap.herokuapp.com">http://stcroixmap.herokuapp.com</a></span></h3>
-        <p>Interactive map with administrator view/privileges created for client (St Croix Valley Regional Tourism Alliance) for group project at Prime Digital Academy with
-          three other students/contributors.  Application utilizes Google Maps API.  Map view features area attractions from four categories or suggested trips.  Trips show routes from user's current location.
-          Admin view allows adding, editing and deleting of attractions or trips.  Admin authentication is done using Firebase.  Application was completed over a three week period.  I wrote a variety of code, but most
-          involved front-end and client-side code including info window, multiple modals, custom map properties, custom map markers, navigation bar (responsive to screen size), and preparing site for deployment with environment variables.</p>
-      </div>
-      <div class="projects">
-        <img class="screenshot" src="images/movieAPI.png" alt="screenshot">
-        <h3>OMDB Movie API - <span class="link"><a href="http://search-and-store-fave-movies.herokuapp.com">http://search-and-store-fave-movies.herokuapp.com</a></span></h3>
-        <p>This full stack web application was made over a weekend about halfway through my time at Prime (week 5 of 7 in Tier 2).  Users search for movies and can select favorite movies to store on the favorites page.  This project was done
-          before the OMDB API required a subscription.  The currently deployed version displays favorites, but no longer can search with OMDB API.  </p>
-      </div>
-      <div class="projects">
-        <img class="screenshot" src="images/highfives.png" alt="screenshot">
-        <h3>Angular High Fives - <span class="link"><a href="http://shield-high-fives.herokuapp.com">http://shield-high-fives.herokuapp.com</a></span></h3>
-        <p>Web application made during in class time while learning and developing comfort with ng-view, services, controllers.  Users "high-five" a character and are randomly generated their "skill" and it is
-          compared to the character's randomly generated "skill" level.  Each character has a different skill range.  Client-side logic compares the skill levels and calculates and displays points.</p>
-      </div>
-      <div class="projects">
-        <img class="screenshot" src="images/serversidecalc.png" alt="screenshot">
-        <h3>Server Side Calculator - <span class="link"><a href="http://form-over-function-calculator.herokuapp.com">http://form-over-function-calculator.herokuapp.com</a></span></h3>
-        <p>This application was made in week 2 of Tier 2.  Calculations are made on server-side to practice server-side logic.  My emphasis was on functionality rather than styling.  </p>
-      </div>
+    </div>
+
       <div class="about">
         <h2>About Me</h2>
-        <p>I am a Licensed Independent Clinical Social Worker turned Software Developer with over a
+        <p>I am a Social Worker turned Software Developer with over a
           decade of experience in fast-paced medical settings.  My background as a social worker uniquely equips me
           with skills for working on teams with a wide variety of people and how to work on both a micro and macro
           level.  I am seeking a position that encourages and expects continued growth and development and will allow
