--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <div class="form">
+    <!-- <div class="form">
       <h2>Contact Me</h2>
       <form class="contactMe" name="contactMe">
         <label for="name">Name:</label><br>
@@ -56,7 +56,7 @@
         <span class="red" ng-if="i.contactError">{{i.errorMessage}}</span>
         <span class="green" ng-if="i.contactSent">{{i.sentMessage}}</span>
       </form>
-    </div>
+    </div> -->
     <footer>
       Copyright <i class="fa fa-copyright"></i>2019 Neota Moe
     </footer>
