--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="vendors/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
   </head>
+
   <body ng-app="myApp" ng-controller="IndexController as i">
     <header>
       <img id="headshot" src="images/headshot.jpg" alt="headshot">
@@ -21,7 +22,6 @@
 
     <div class="work">
     </div>
-
       <div class="about">
         <h2>About Me</h2>
         <p>I am a Social Worker turned Software Developer with over a
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <!-- <div class="form">
+    <div class="form">
       <h2>Contact Me</h2>
       <form class="contactMe" name="contactMe">
         <label for="name">Name:</label><br>
@@ -56,7 +56,8 @@
         <span class="red" ng-if="i.contactError">{{i.errorMessage}}</span>
         <span class="green" ng-if="i.contactSent">{{i.sentMessage}}</span>
       </form>
-    </div> -->
+    </div>
+
     <footer>
       Copyright <i class="fa fa-copyright"></i>2019 Neota Moe
     </footer>
