download resume button

--- a/public/index.html
+++ b/public/index.html
@@ -22,25 +22,29 @@
 
     <div class="work">
     </div>
-      <div class="about">
-        <h2>About Me</h2>
-        <p>I am a Social Worker turned Software Developer with over a
-          decade of experience in fast-paced medical settings.  My background as a social worker uniquely equips me
-          with skills for working on teams with a wide variety of people and how to work on both a micro and macro
-          level.  I am seeking a position that encourages and expects continued growth and development and will allow
-          me to contribute to a team from day one.</p>
-        <p>I utilize my combination of technical software developer skills and social work training to write clear code,
-          solve problems, and create positive and effective working relationships with clients and team members.  Context-switching,
-          multi-tasking, and managing change are integral to productivity and inherent in my day to day work.  I
-          believe writing good code is only part of what makes a developer great and believe my ability to view situations
-          from different perspectives complement my technical abilities and knowledge.  I am detail-oriented, hard-working, and hold
-          myself to high standards and expectations.  I am a natural leader, team-builder and collaborator.</p>
-        <p>I truly consider no job is too big and no task is too small; I know that often doing the things that aren’t
-          written in the job description are integral to getting things done and contributing to a team.  I believe asking
-          questions is good, asking the right question is better and doing something with the answer is even better.</p>
-        <p>I earned a Master of Social Work from University of Washington and a Bachelor of Arts in Sociology and Spanish from
-          University of Minnesota, Morris.</p>
-      </div>
+    <div class="about">
+      <h2>About Me</h2>
+      <p>I am a Social Worker turned Software Developer with over a
+        decade of experience in fast-paced medical settings.  My background as a social worker uniquely equips me
+        with skills for working on teams with a wide variety of people and how to work on both a micro and macro
+        level.  I am seeking a position that encourages and expects continued growth and development and will allow
+        me to contribute to a team from day one.</p>
+      <p>I utilize my combination of technical software developer skills and social work training to write clear code,
+        solve problems, and create positive and effective working relationships with clients and team members.  Context-switching,
+        multi-tasking, and managing change are integral to productivity and inherent in my day to day work.  I
+        believe writing good code is only part of what makes a developer great and believe my ability to view situations
+        from different perspectives complement my technical abilities and knowledge.  I am detail-oriented, hard-working, and hold
+        myself to high standards and expectations.  I am a natural leader, team-builder and collaborator.</p>
+      <p>I truly consider no job is too big and no task is too small; I know that often doing the things that aren’t
+        written in the job description are integral to getting things done and contributing to a team.  I believe asking
+        questions is good, asking the right question is better and doing something with the answer is even better.</p>
+      <p>I earned a Master of Social Work from University of Washington and a Bachelor of Arts in Sociology and Spanish from
+        University of Minnesota, Morris.</p>
+      <p>
+          <a href="/NeotaMoe_Resume2017.pdf" download="NeotaMoe-Resume-2017">
+          <button type="button">Download Resume</button>
+        </a>
+      </p>
     </div>
 
     <div class="form">
