new color sheme

--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,19 @@
         questions is good, asking the right question is better and doing something with the answer is even better.</p>
       <p>I earned a Master of Social Work from University of Washington and a Bachelor of Arts in Sociology and Spanish from
         University of Minnesota, Morris.</p>
+    </div>
+    <div class="work">
+    </div>
+    <div class="about">
+      <h2>Experience</h2>
       <p>
           <a href="/NeotaMoe_Resume2017.pdf" download="NeotaMoe-Resume-2017">
           <button type="button">Download Resume</button>
         </a>
       </p>
     </div>
-
+    <div class="work">
+    </div>
     <div class="form">
       <h2>Contact Me</h2>
       <form class="contactMe" name="contactMe">
@@ -61,10 +67,8 @@
         <span class="green" ng-if="i.contactSent">{{i.sentMessage}}</span>
       </form>
     </div>
-
     <footer>
       Copyright <i class="fa fa-copyright"></i>2019 Neota Moe
     </footer>
-
   </body>
 </html>
