text update and add links

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,9 @@
       <p>I truly consider no job is too big and no task is too small; I know that often doing the things that aren’t
         written in the job description are integral to getting things done and contributing to a team.  I believe asking
         questions is good, asking the right question is better and doing something with the answer is even better.</p>
-      <p>I earned a Master of Social Work from University of Washington and a Bachelor of Arts in Sociology and Spanish from
-        University of Minnesota, Morris.</p>
+      <p>I earned a Full Stack Software Engineering Certification from <a href="https://primeacademy.io/courses/engineering" target="_blank">Prime 
+        Digital Academy</a>, Master of Social Work from <a href="https://socialwork.uw.edu/" target="_blank">University of Washington</a>, and 
+        a Bachelor of Arts in Sociology and Spanish from <a href="https://www4.morris.umn.edu/" target="_blank">University of Minnesota, Morris</a>.</p>
     </div>
     <div class="work">
     </div>
